--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,173 +2,95 @@
     font-size: $header-footer_font-size;
     .container{
         @include common_container-options;
-        justify-content: space-between;
         display: flex;
-        padding:  60px 0px;
+        justify-content: space-around;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        font-size: $header-footer_font-size;
         font-family: $main_font;
+        color: $main_font-color;
+        line-height: 20px;
         a{
             &:hover{
-            border-bottom: 1px solid #676767;
-        }
-        }
-        h2{
-            font-size: $main_font-size;
-            line-height: 40px;
-            font-weight: bold;
-        }
-        li{
-            line-height: 24px;
-        }
-        .colection{
-            margin-left: 35px;
-        }
-        .social{
-            margin-right: 80px;
-            a{
-                margin-right: 15px;
-                border-bottom: none;
+                border-bottom: 1px solid $border-color;
             }
-            p{
-                line-height: 24px;
-                max-width: 230px;
-                margin-bottom: 25px;   
+        }
+        div + div{
+            border-left: 1px solid $border-color;
+        }
+        .footer__list{
+            padding-left: 20px;
+            width: 20%;
+           span{
+                font-weight: 600;
+                line-height: 30px;
             }
-            .twitter{
-                &:after{
-                    margin-top: 40px;
-                    content: '\ea96';
-                    border: 1px solid #606060;
-                    font-family: 'icomoon';
-                    font-size: 0.875em;
-                    padding: 8px;
-                    color: #34a1f2;
+            .social-link{
+                border: 1px solid $border-color;
+                margin: 20px 12px 18px 0;
+                display: inline-block; 
+                width: 32px;
+                height: 32px;
+                position: relative;
+            }
+            .twitter-icon{
+                &::before{
+                    content: '';
+                    background-image: url(../images/icons/twitter-icon.svg);
+                    width: 16px;
+                    position: absolute;
+                    height: 14px;
+                    left: 8px;
+                    top: 7px;
                 }
             }
-            .facebook{
-                &:after{
-                    margin-top: 40px;
-                    content: '\ea90';
-                    border: 1px solid #606060;
-                    font-family: 'icomoon';
-                    font-size: 0.875em;
-                    padding: 8px;
-                    color: #4267b2;
+            .facebook-icon{
+                &::before{
+                    content: '';
+                    background-image: url(../images/icons/fb-icon.svg);
+                    width: 8px;
+                    position: absolute;
+                    height: 15px;
+                    left: 10px;
+                    top: 6px;
                 }
             }
-            .instagram{
-                &:after{
-                    margin-top: 40px;
-                    content: '\ea92';
-                    border: 1px solid #606060;
-                    font-family: 'icomoon';
-                    font-size: 0.875em;
-                    padding: 8px;
-                    color: #d6249f;
-                }
+            .instagram-icon{
+                &::before{
+                    content: '';
+                    background-image: url(../images/icons/insta-icon.svg);
+                    width: 8px;
+                    position: absolute;
+                    width: 17px;
+                    height: 15px;
+                    left: 7px;
+                    top: 7px; 
+                } 
             }
-        }
+        } 
     }
 }
-@media (max-width: 820px){
+@media(max-width: 840px){
     .footer .container{
+        padding-top: 20px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        padding: 25px 60px;
     }
-    .footer .container .colection{
-        // width: 50%;
-        margin: 0 35px;
+    .footer .container .footer__list{
+       width: 50%;
     }
-    .footer .container .shop{
-        // width: 50%;
-        margin: 0 35px;
-
+    .footer .container .footer__list{
+        border-left: 1px solid $border-color;
     }
-    .footer .container .site{
-        margin: 0 35px;
-    }
-    .footer .container .social{
-        margin: 0 35px;
-    }
-
 }
-
-
-
-// .footer{
-//     position: relative;
-//     margin: 0 auto;
-//     max-width: 1244px;
-//     margin-bottom: 60px;
-//     display: flex;
-//     justify-content: space-between;
-//     color: $main_font-color;
-//     padding:  60px 0px;
-//     background-color: $container-color;
-    // a{
-    //     &:hover{
-    //     border-bottom: 1px solid #676767;
-    // }
-    // }
-    // h2{
-    //     font-family: $main_font;
-    //     font-size: 16px;
-    //     line-height: 40px;
-    //     font-weight: bold;
-    // }
-    // li{
-    //     font-family: $main_font;
-    //     font-size: 14px;
-    //     line-height: 24px;
-    // }
-    // .colection{
-    //     margin-left: 35px;
-    // }
-    // .social{
-    //     margin-right: 80px;
-    //     a{
-    //         margin-right: 15px;
-    //         border-bottom: none;
-    //     }
-    //     p{
-    //         line-height: 24px;
-    //         max-width: 230px;
-    //         font-size: 15px;
-    //         margin-bottom: 25px;   
-    //     }
-    //     .twitter{
-    //         &:after{
-    //             margin-top: 40px;
-    //             content: '\ea96';
-    //             border: 1px solid #606060;
-    //             font-family: 'icomoon';
-    //             font-size: 14px;
-    //             padding: 8px;
-    //             color: #34a1f2;
-    //         }
-    //     }
-    //     .facebook{
-    //         &:after{
-    //             margin-top: 40px;
-    //             content: '\ea90';
-    //             border: 1px solid #606060;
-    //             font-family: 'icomoon';
-    //             font-size: 14px;
-    //             padding: 8px;
-    //             color: #4267b2;
-    //         }
-    //     }
-    //     .instagram{
-    //         &:after{
-    //             margin-top: 40px;
-    //             content: '\ea92';
-    //             border: 1px solid #606060;
-    //             font-family: 'icomoon';
-    //             font-size: 14px;
-    //             padding: 8px;
-    //             color: #d6249f;
-    //             }
-    //         }
-    //     }
-        
-// }
+@media(max-width: 440px){
+    .footer .container .footer__list .social-link{
+        border: 1px solid $border-color;
+        margin: 20px 12px 18px 0;
+        display: block; 
+        width: 32px;
+        height: 32px;
+        position: relative;
+    }
+}
