--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -19,6 +19,7 @@
                 padding: 0px 55px;
                 display: flex;
                 align-items: center;
+                justify-content: center;
                 h3{
                     @include grid_title;
                 }
@@ -73,7 +74,7 @@
                 position: relative;
                 &::before{
                     position: absolute;
-                    background-image: url(../img/icons/grid_twirer-icon.png);
+                    background-image: url(../images/icons/grid_twirer-icon.png);
                     width: 99px;
                     height: 25px;
                     top: -45%;
@@ -87,7 +88,7 @@
                 position: relative;
                 &::before{
                     position: absolute;
-                    background-image: url(../img/icons/grid_left-arrow.png);
+                    background-image: url(../images/icons/grid_left-arrow.png);
                     width: 23px;
                     height: 13px;
                     top: -25px;
@@ -106,7 +107,7 @@
         display: flex;
     }
     .grid .container .grid__inner .grid__column {
-        width: 40%;
+        width: 45%;
         }    
 }
 @media (max-width: 770px){
@@ -134,7 +135,7 @@
         display: flex;
     }
     .grid .container .grid__inner .grid__column {
-        width: 51%;
+        width: 90%;
         } 
         .grid .container .grid__inner .grid__item{
             min-height: 200px;
@@ -165,287 +166,3 @@
     line-height: 16px;
 }
 }
-
-
-
-
-
-// .grid{
-//     max-width: 1244px;
-//     background-color: $page_back_gro-col;
-//     margin: 0 auto;
-//     display: grid;
-//     .grid_inner{
-//         max-width: 1180px;
-//         position: relative;
-//         margin: 150px 35px;
-//         display: grid;
-//         grid-auto-rows: minmax(270px, auto);
-//         grid-auto-columns: minmax(300px, 300px) ;
-//         grid-template-columns: repeat(4, 1fr);
-//         color: #ffffff;
-        
-//         .grid_item-1{
-//             background-color: $grid_item_1-col;
-//             grid-column: span 1;
-//             grid-row: span 2;
-//             position: relative;
-//             .grid_1-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 270px;                
-//                 left: 50%;
-//                 top: 50%;
-//                 h2{
-//                     font-size: 24px;
-//                     line-height: 27px;
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     line-height: 30px;
-//                     font-style: italic;
-//                     font-size: 18px;
-//                 }   
-//             }
-//         }
-//         .grid_item-2{
-//             background-color: $grid_item_2-col;
-//             position: relative;
-//             .grid_2-text{
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 205px;
-//                 transform: translate(-50%, -50%);
-//                 top: 50%;
-//                 left: 50%;
-//                 span{
-//                     margin: 0 auto;
-//                     display: block;
-//                     a{
-//                         &::before{
-//                             content: '';
-//                             border-top: 1px solid #ffffff;
-//                             width: 20px;
-//                             position: absolute;
-//                             top: 15px; 
-//                             left: 30px;
-//                         }
-//                         &:after{
-//                             content: '';
-//                             border-top: 1px solid #ffffff;
-//                             width: 20px;
-//                             position: absolute; 
-//                             top: 15px; 
-//                             right: 30px;
-//                         }
-//                     }
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     font-style: italic;
-//                     font-size: 14px;
-//                     line-height: 19px;
-//                 }
-//                 h3{
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                     font-size: 14px;
-//                     line-height: 40px;
-//                 }
-//             }
-//         }
-//         .grid_item-3{
-//             background-color: $grid_item_3-col;
-//         }
-//         .grid_item-4{
-//             background-color: $grid_item_4-col;
-//             position: relative;
-            
-//             .grid_4-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 270px;
-//                 left: 50%;
-//                 top: 50%;
-//                 span{
-//                     margin: 0 auto;
-//                     display: block;
-//                 }
-//                 h2{
-//                     font-size: 24px;
-//                     line-height: 27px;
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                     letter-spacing: 1px;
-
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     line-height: 30px;
-//                     font-style: italic;
-//                     font-size: 18px;
-//                 }
-//             }  
-//         }
-//         .grid_item-5{
-//             background-color: $grid_item_5-col;
-//             position: relative;
-//             .grid_5-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 270px;
-//                 left: 50%;
-//                 top: 50%;
-//                 h2{
-//                     font-size: 24px;
-//                     line-height: 27px;
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                     letter-spacing: 1px;
-
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     line-height: 30px;
-//                     font-style: italic;
-//                     font-size: 18px;
-//                 }
-//             }
-//         }
-//         .grid_item-6{
-//             background-color: $grid_item_6-col;
-//             text-align: center;
-//             position: relative;
-//             .grid_6-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 65%;
-//                 left: 50%;
-//                 top: 50%;
-//                 span{
-//                     margin: 0 auto;
-//                     display: block;
-//                     a{
-//                         &::before{
-//                             content: '';
-//                             border-top: 1px solid #ffffff;
-//                             width: 20px;
-//                             position: absolute;
-//                             top: 15px; 
-//                             left: 30px;
-//                         }
-//                         &:after{
-//                             content: '';
-//                             border-top: 1px solid #ffffff;
-//                             width: 20px;
-//                             position: absolute; 
-//                             top: 15px; 
-//                             right: 30px;
-//                         }
-//                     }
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     font-style: italic;
-//                     font-size: 14px;
-//                     line-height: 19px;
-//                 }
-//                 h3{
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                     font-size: 14px;
-//                     line-height: 40px;
-//                 }
-//             }
-            
-//         }
-//         .grid_item-7{
-//             background-color: $grid_item_7-col;
-//             grid-column: span 1;
-//             grid-row: span 2;
-//             position: relative;
-//             .grid_7-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 270px;
-//                 left: 50%;
-//                 top: 50%;
-//                 h2{
-//                     font-size: 24px;
-//                     line-height: 27px;
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                     letter-spacing: 1px;
-
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     line-height: 30px;
-//                     font-style: italic;
-//                     font-size: 18px;
-//                 }
-//             }
-//         }
-//         .grid_item-8{
-//             background-color: $grid_item_8-col;
-            
-//         }
-//         .grid_item-9{
-//             background-color: $grid_item_9-col;
-//             position: relative;
-//             .grid_9-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 270px;
-//                 left: 50%;
-//                 top: 50%;
-//                 span{
-//                     margin: 0 auto;
-//                     display: block;
-//                 }
-//                 h2{
-//                     font-size: 24px;
-//                     line-height: 27px;
-//                     font-family: $main_font-reg;
-//                     font-weight: bold;
-//                     letter-spacing: 1px;
-
-//                 }
-//                 i{
-//                     font-family: "Georgia";
-//                     line-height: 30px;
-//                     font-style: italic;
-//                     font-size: 18px;
-//                 }
-//             }    
-//         }
-//         .grid_item-10{
-//             background-color: $grid_item_10-col;
-//             position: relative;
-//             .grid_10-text{
-//                 transform: translate(-50%, -50%);
-//                 position: absolute;
-//                 text-align: center;
-//                 width: 65%;
-//                 left: 50%;
-//                 top: 50%;
-//                 h2{
-//                     font-size: 22px;
-//                 }
-//                 i{
-//                     font-style: italic;
-//                     line-height: 30px;
-//                     font-size: 18px;
-//                 }
-//             }
-//         }
-//     }
-// }
