--- a/scss/_newsletter.scss
+++ b/scss/_newsletter.scss
@@ -34,6 +34,8 @@
                 right: 4px;
                 border: 1px solid #e67429;
                 background-color: #f68236;
+                -moz-appearance: none;
+                -webkit-appearance: none;
             }
         }
     }
