--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -164,6 +164,15 @@
         font-family: $main_font-reg;
         font-size: $header-footer_font-size;
     }
+
+    @mixin button-reset {
+        padding: 0;
+        border: none;
+        font: inherit;
+        color: inherit;
+        background-color: transparent;
+        cursor: pointer;
+     }
 //==/mixins
 
 
